--- a/formulario.html
+++ b/formulario.html
@@ -27,7 +27,7 @@
             <input type="email" name="email" id="email"  placeholder="E-mail" >
             </div>
             <div>
-                <p>Confirme seu e-mail</p>
+                <p>Confirme seu e-mail.</p>
                 <input type="email" name="confirm-email" id="confirm-email" placeholder="Insira seu e-mail novamente">
             </div>
             <div>
