Segunda parte do projeto

--- a/formulario.html
+++ b/formulario.html
@@ -28,7 +28,11 @@
             </div>
             <div>
                 <p>Confirme seu e-mail.</p>
-                <input type="email" name="confirm-email" id="confirm-email" placeholder="Insira seu e-mail novamente">
+                <input type="email" name="confirm-email" id="confirm-email" placeholder="Insira seu e-mail novamente" required>
+            </div>
+            <div>
+                <p>Crie uma senha</p>
+                <input type="password" name="password" id="password" placeholder="Crie uma senha">
             </div>
             <div>
                 <p>Qual o seu telefone?</p>
@@ -55,7 +59,7 @@
             <input type="submit" value="Inscrever-se" id="submit-btn">
         </form>
         <p id="privacy">Para saber mais sobre como o Spotify coleta, utiliza, compartilha e protege seus dados pessoais, leia a <a href="#">Política de Privacidade do Fusion.</a></p>
-        <p id="login">Já tem uma conta? <a href="#">Faça o login.</a></p>
+        <p id="login">Já tem uma conta? <a href="login.html">Faça o login.</a></p>
     </div>
 </body>
 </html>
