--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Streaming</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="view/css/estilo.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
     <div class="conta">
         <div class="pessoal">
             <div>
-                <img src="img/foto-2.jpeg" alt="">
+                <img src="view/img/foto-2.jpeg" alt="">
                 <p id="nome">Angelo Queiroz</p>
             </div>
             <ul>
@@ -32,7 +32,10 @@
                 <li>Favoritos</li>
                 <li>Biblioteca</li>
             </ul>
-            <p>Configurações</p>
+            <div>
+                <p><a href="account.html">Configurações</a></p>
+                <p><a href="login.html">Sair</a></p>
+            </div>
         </div>
     </div>
 
