incluindo o processo de login PHP no projeto

--- a/formulario.html
+++ b/formulario.html
@@ -35,11 +35,15 @@
                 <input type="password" name="password" id="password" placeholder="Crie uma senha">
             </div>
             <div>
+                <p>Confirme sua senha</p>
+                <input type="password" name="confirm-password" id="password" placeholder="Insira a senha novamente">
+            </div>
+            <div>
                 <p>Qual o seu telefone?</p>
                 <input type="text" name="cel-number" id="cel-number" placeholder="(00) 0000-0000">
             </div>
             <div>
-                <p>Quantos anos você tem?</p>
+                <p>Qual é a sua data de nascimento?</p>
                 <input type="date" id="nascimento" name="nascimento">
             </div>
             <div>
