--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <p>Digite sua senha</p>
-                <input type="text" name="senha" id="senha" placeholder="Digite sua senha" required>
+                <input type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
             </div>
             <div>
                 <input type="checkbox" name="remember" id="remember">
