Adicionado telas de alterações

--- a/formulario.html
+++ b/formulario.html
@@ -64,7 +64,7 @@
             <input type="reset" name="reset" id="reset-btn">
             <input type="submit" value="Inscrever-se" id="submit-btn">
         </form>
-        <p id="privacy">Para saber mais sobre como o Spotify coleta, utiliza, compartilha e protege seus dados pessoais, leia a <a href="#">Política de Privacidade do Fusion.</a></p>
+        <p id="privacy">Para saber mais sobre como o Fusion coleta, utiliza, compartilha e protege seus dados pessoais, leia a <a href="#">Política de Privacidade do Fusion.</a></p>
         <p id="login">Já tem uma conta? <a href="login.html">Faça o login.</a></p>
     </div>
 </body>
