--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li>Option2</li>
                     <li>Option3</li>
                     <li>Option4</li>
-                    <li><a href="">Configurações</a></li>
+                    <li><a href="account.html">Configurações</a></li>
                 </ul>
             </div>
             <p><a href="controller/sair.php">Deslogar</a></p>
